assets/css/style.css
.dropdown-menu {
  max-height: 400px;
  /* Set max height for the dropdown menu */
  overflow-y: auto;
  /* Enable scrolling for the dropdown menu */
}

.dropdown-item {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding: 10px;
}

.dropdown-item img {
  width: 50px;
  height: 50px;
  object-fit: cover;
  margin-right: 10px;
}

.dropdown-item h6 {
  margin: 0;
  font-size: 14px;
}

.dropdown-item .item-details {
  flex-grow: 1;
}

.dropdown-item .quantity {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.dropdown-item .quantity input {
  width: 50px;
  text-align: center;
}

.dropdown-item .total-price {
  font-weight: bold;
}

.dropdown-item .buttons {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.dropdown-item .buttons button {
  margin-left: 10px;
}

